--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,13 +10,20 @@
             "args": [],
             "group": {
                 "kind": "build",
-                "isDefault": true
+                "isDefault": false
             }
         },
         {
             "label": "stam's fluid",
             "type": "shell",
             "command": "g++ -std=c++14 -g -o fluid fluid.cpp",
+            "group": "build",
+            "problemMatcher": []
+        },
+        {
+            "label": "OpenGL",
+            "type": "shell",
+            "command": "g++ -std=c++14 -g -o OpenGL_Renderer *.cpp -lglfw -lGLEW -lGL",
             "group": "build",
             "problemMatcher": []
         }
